--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.emildesign.applicaster_assignment"
         minSdkVersion 19
@@ -31,22 +31,34 @@ dependencies {
 
     compile 'com.google.android.gms:play-services-auth:11.6.0'
 
+    //Support
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
 
+    //Retrofit
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     testCompile 'junit:junit:4.12'
 
+    //YouTube Sdk
     compile 'pub.devrel:easypermissions:0.3.0'
     compile('com.google.api-client:google-api-client-android:1.23.0') {
         exclude group: 'org.apache.httpcomponents'
     }
-
     compile('com.google.apis:google-api-services-youtube:v3-rev187-1.23.0') {
         exclude group: 'org.apache.httpcomponents'
     }
+
+    //RX
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.2.1'
+
+    //Dagger2 - dependency injection
+    compile 'com.google.dagger:dagger:2.0'
+    compile 'javax.inject:javax.inject:1'
+    provided 'javax.annotation:jsr250-api:1.0'
+    //apt 'com.google.dagger:dagger-compiler:2.0'
 }
