--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -20,6 +21,10 @@ android {
 
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
+
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
     }
 }
 
@@ -35,7 +40,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
 
     //Retrofit
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
@@ -54,11 +58,17 @@ dependencies {
 
     //RX
     compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.2.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
 
     //Dagger2 - dependency injection
-    compile 'com.google.dagger:dagger:2.0'
-    compile 'javax.inject:javax.inject:1'
-    provided 'javax.annotation:jsr250-api:1.0'
+    //compile 'com.google.dagger:dagger:2.0'
+    //compile 'javax.inject:javax.inject:1'
+    //provided 'javax.annotation:jsr250-api:1.0'
     //apt 'com.google.dagger:dagger-compiler:2.0'
+
+    //picasso
+    //compile 'com.squareup.picasso:picasso:2.5.2'
+
+    //Glide
+    compile 'com.github.bumptech.glide:glide:4.3.1'
 }
