--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,33 +34,28 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.google.android.gms:play-services-auth:11.6.0'
+
     //Support
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
-    //Retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    testCompile 'junit:junit:4.12'
-    //YouTube Sdk
+
+    //Permissions
     compile 'pub.devrel:easypermissions:0.3.0'
+
+    //YouTube Sdk
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
     compile('com.google.api-client:google-api-client-android:1.23.0') {
         exclude group: 'org.apache.httpcomponents'
     }
     compile('com.google.apis:google-api-services-youtube:v3-rev187-1.23.0') {
         exclude group: 'org.apache.httpcomponents'
     }
+
     //RX
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.3'
-    //Dagger2 - dependency injection
-    //compile 'com.google.dagger:dagger:2.0'
-    //compile 'javax.inject:javax.inject:1'
-    //provided 'javax.annotation:jsr250-api:1.0'
-    //apt 'com.google.dagger:dagger-compiler:2.0'
-    //picasso
-    //compile 'com.squareup.picasso:picasso:2.5.2'
+
     //Glide
     compile 'com.github.bumptech.glide:glide:4.3.1'
-    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
